[package]
name = "n-sync"
version = "1.0.0"
edition = "2021"
authors = ["Neko Nik <admin@nekonik.com>"]
description = "A simple CLI tool for Syncing files across servers over SSH or local filesystem"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
notify = "6.1.1"
tokio = { version = "1.32", features = ["full"] }


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
